fix: social networks links

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				<ul class="icons">
 					<li><a target="_blank" href="https://twitter.com/cuarentaydosdev" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-					<li><a target="_blank" href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a target="_blank" href="https://www.instagram.com/cuarentaydos.dev" class="icon brands alt fa-github"><span class="label">GitHub Slarrauri</span></a></li>
+					<li><a target="_blank" href="https://www.instagram.com/cuarentaydos.dev" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a target="_blank" href="https://github.com/cuarentaydosdev" class="icon brands alt fa-github"><span class="label">GitHub Cuarentados</span></a></li>
 				
 					<!--<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>-->
 				</ul>
